# zap-web-scanner

./: .gitignore  CLAUDE.md  Claude ZAP_MCP_Playbook.md  README.md  airgap-setup.md  pyproject.toml  todo.txt  web-scanner.py
data/: kisa_2026_items.json  zap_alert_mapping.json
docs/: Claude-ZAP_MCP_설정_가이드.md
prompts/: item_analysis.txt  summary.txt
scanner/: __init__.py  config.py  logging_setup.py  models.py  orchestrator.py  retry.py
scanner/analysis/: analyzer.py  mapper.py
scanner/report/: docx_report.py  json_report.py
scanner/zap/: client.py  manual_checks.py  throttle.py
